k8s/portfolio/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: portfolio
  labels:
    app: portfolio-app
spec:
  selector:
    app: portfolio-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
